# cmake-demo

./: CMakeLists.txt  libdemo.c
